add two exercise questions

--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "@babel/preset-react": "^7.8.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^6.7.1",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.1.2",
-    "jest": "^24.9.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.1",
